DPO-3077 sektoritiedon tietokanta ja päättelylogiikka (#81)
* DPO-3077 first version of sectors

* DPO-3077 added SectorMapTest

* DPO-3077 disable one test

* DPO-3077 disable only one test

* DPO-3077 ok, disable whole test

* DPO-3077 review fixes

* DPO-3077 put new compositions into queue

* PO-3077 disable test

* DPO-3077 delete handled item

* DPO-3077 change sql file version

* DPO-3077 change sql version again

* DPO-3077 fixes on updating

* DPO-3077 log when stop sector not found

* DPO-3077 better logging

* DPO-3077 persist -> saveAll

* DPO-3077 better logging, some fixes to queue handling

* DPO-3077 change direction map implementation

* DPO-3077 null sector when no sector found and sector is set

* DPO-3077 read stop sector directions from included file

* DPO-3077 fix imports

* DPO-3077 and disable failing test

* DPO-3077 move initialization into DirectionMap for easier testing, faster direction searching

* DPO-3077 use input stream with csv-files

* DPO-3077 add sectors csv, change StringTokenizer to String.split

* DPO-3077 only log about stop sector not found, when station is found in map

* DPO-3077 add stop sector to LiveTrains views

* DPO-3077 only update missing direction when there is some directions for the station

* DPO-3077 logging change

* DPO-3077 update sectors also on train changes

* DPO-3077 typofix and other small changes

* DPO-3077 add queue items from StopSectorService

* DPO-3077 first version of sectors

* DPO-3077 added SectorMapTest

* DPO-3077 disable one test

* DPO-3077 disable only one test

* DPO-3077 ok, disable whole test

* DPO-3077 review fixes

* DPO-3077 put new compositions into queue

* PO-3077 disable test

* DPO-3077 delete handled item

* DPO-3077 change sql file version

* DPO-3077 change sql version again

* DPO-3077 fixes on updating

* DPO-3077 log when stop sector not found

* DPO-3077 better logging

* DPO-3077 persist -> saveAll

* DPO-3077 better logging, some fixes to queue handling

* DPO-30